src/styles/globals.css
@import url("https://fonts.googleapis.com/css2?family=Fira+Sans:wght@200;300;400;700;900&family=Iceland&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  html {
    font-family: "Fira Sans", system-ui, sans-serif;
    -webkit-tap-highlight-color: transparent;
  }
}

@layer components {
  .padding {
    @apply mx-auto w-10/12 max-w-5xl py-4;
  }
  .filled-button {
    @apply pointer-events-auto mt-3 bg-secondary py-3 px-8 uppercase text-black shadow-lg shadow-primary/30 hover:brightness-110 active:brightness-90;
  }
}

.swiper-button-prev,
.swiper-button-next {
  @apply mx-[18%];
}
@media (hover: hover) {
  .swiper-button-prev,
  .swiper-button-next {
    @apply transition-all hover:scale-150 hover:text-secondary;
  }
}

